--- a/css/screen.css
+++ b/css/screen.css
@@ -4,7 +4,8 @@
 html {
 	padding: 0.75em; /* 12/16 = 0.75*/
 	background-color: #8b324d;
-	color: #97c3c3;
+	color: #f3eaed;
+	
 }
 body {
 	font-size: 1.3125em /* 21/16 = 1.3125em*/;
@@ -14,10 +15,12 @@ body {
 h1 {
 	font-size: 1.428em /* 30/21 = 1.428 */;
 	padding-bottom: 1em;
+	font-weight: bold;
 }
 
 li {
 	padding: 0.238em /*5/21=0.238 */
+	
 }
 
 
