--- a/css/screen.css
+++ b/css/screen.css
@@ -18,6 +18,14 @@ h1 {
 	font-weight: bold;
 }
 
+button {
+	padding: 0.317em /* 6.651/21 */;
+}
+
+div {
+	padding-top: 1em;
+}
+
 @media screen and (min-width: 46.875em)/* 750 / 16 = 46.875 */ {
 	
 	#input_boxes {
